<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:orientation="horizontal" 
    android:padding="3dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon" 
        android:contentDescription="@string/descPosterImage"
        android:layout_margin="5dp"/>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/toptext"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
        />
    
        <TextView
            android:id="@+id/bottomtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toptext"
            android:text="@string/lblYear" 
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
        />

        <ImageView android:id="@+id/imgSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_exact"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_toLeftOf="@id/imgSub"
            android:text="@string/lblRating" 
        />

        <ImageView
            android:id="@+id/imgDownloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/toptext"
            android:contentDescription="@string/descDownloading"
            android:src="@android:drawable/stat_sys_download" />


        <ImageView
            android:id="@+id/imgWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toptext"
            android:layout_toLeftOf="@id/imgDownloading"
            android:src="@android:drawable/ic_menu_view"
            android:contentDescription="@string/descWatched" />

        <ImageView
            android:id="@+id/imgConverted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/imgWatched"
            android:contentDescription="@string/descConverted"
            android:src="@drawable/ic_mms_black_24dp" />

    </RelativeLayout>
   
</LinearLayout>