<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|clip_vertical|fill_horizontal"
    android:orientation="vertical" 
    android:id="@+id/rootMovieItem">

    <ListView 
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true">
    </ListView>
            
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/descPosterImage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblYear"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        
		    <TextView
		        android:id="@+id/textViewGenre"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblGenre"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		
		    <TextView
		        android:id="@+id/textViewDirector"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblDirector"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		
		    <TextView
		        android:id="@+id/textViewDuration"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblDuration"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		
		    <TextView
		        android:id="@+id/textViewRating"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblRating"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
                
        </LinearLayout>
    </LinearLayout>


    <ListView 
        android:id="@+id/listViewFilename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="4dp"        
        android:layout_below="@id/linearLayout2"
        android:clickable="false"
        android:longClickable="false"
        android:dividerHeight="0dip">
    </ListView>
  
    <TextView
        android:id="@+id/textViewStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblStory"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:layout_below="@id/listViewFilename"
        android:layout_alignParentLeft="true"
        android:paddingTop="6dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="4dp"
	/>



	<ProgressBar
		android:id="@+id/progressWatched"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
		android:max="100"
		android:progress="50"
		android:theme="@style/progressBarRed"
		android:layout_below="@id/textViewStory"
		/>


	<TextView
		android:id="@+id/txtDetalsHeader"
		android:text="@string/lblDetailsHeader"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/progressWatched"
		/>


	<LinearLayout
		android:id="@+id/layoutDetailsPane"
		android:layout_below="@id/txtDetalsHeader"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>

		<TextView
			android:id="@+id/txtDetailsOne"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</LinearLayout>


	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/castMiniController"
		android:layout_alignWithParentIfMissing="true"
		android:gravity="center_horizontal" >

		<ImageButton
			android:id="@+id/btnPlay"
			android:layout_width="60dp"
			android:layout_height="match_parent"
			android:background="@null"
			android:onClick="onButtonClicked"
			android:src="@drawable/btnplay" />

		<ImageButton
			android:id="@+id/btnViewInfo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@null"
			android:hapticFeedbackEnabled="true"
			android:src="@drawable/infoabout"
			android:contentDescription="@string/descViewInfo"
			android:onClick="onButtonClicked"

			/>

	</LinearLayout>

	<fragment
		android:id="@+id/castMiniController"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:visibility="visible"
		class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment" />

</RelativeLayout>